# free_sms_tool

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  compose.yaml  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py  models.py  security.py
app/api/: deps.py  routes.py  schemas.py
app/collector/: main.py
app/db/: __init__.py  bootstrap.py  core.py  repository.py
app/providers/: __init__.py  base.py  registry.py
app/services/: __init__.py  jobs.py  selection.py  sync.py
app/web/: __init__.py  auth.py  deps.py
app/web/routes/: apps.py  auth.py  claims.py  dashboard.py  numbers.py  providers.py  sync.py
app/web/templates/: app_detail.html  apps.html  auth_keys.html  base.html  claim_detail.html  claims.html  dashboard.html  number_detail.html  numbers.html  providers.html
app/web/templates/partials/: selected_number.html  sync_result.html
docs/: api.md  provider-freshness-validation.md  system-design.md
scripts/: capture_provider_fixtures.py  provider_probe.py
tests/: test_api_smoke.py  test_claim_atomicity.py  test_job_queue.py  test_provider_fixtures.py  test_provider_live.py  test_web_pages.py
tests/fixtures/providers/freephonenum/: detail.html  discovery.html  entry.json
tests/fixtures/providers/jiemahao/: detail.html  discovery.html  entry.json
tests/fixtures/providers/quackr/: entries.json  numbers.json
tests/fixtures/providers/receive_sms_free_cc/: detail.html  discovery.html  entry.json
tests/fixtures/providers/receive_smss/: detail.html  discovery.html  entry.json
(+11 files in other folders)
