[project]
name = "free-sms-tool"
version = "0.2.0"
description = "Evidence-first free SMS pool manager built with FastAPI, HTMX, SQLite, uv, and API key-protected JSON APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.28",
  "jinja2>=3.1",
  "loguru>=0.7",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: optional live provider checks that hit real network targets",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
